nutype_test_suite/tests/ui/string/sanitize/duplicated.stderr
error: Duplicated sanitizer `trim`.
       You're doing well, it's not that bad unless you forgot to call your mom!
 --> tests/ui/string/sanitize/duplicated.rs:3:36
  |
3 | #[nutype(sanitize(trim, lowercase, trim))]
  |                                    ^^^^
